# autotune

./: .gitignore  program.md  proposal.md  pyproject.toml
data/: ADR-guardrails-extproc-combined.md  TODO_REGULARIZATION.md  Untitled document.txt  bai-gateway-v2.html  experiment_progress.tsv  explorer.html  orchestration_agent_graph_design_updated.md  prompt.rtf  prompt_injection_findings_deck_simple.pptx  prompt_slm.txt  report.html  research_summary.md  spec.txt  summary_overall.csv
data/plot/: label_corrections_audit.md
data/synthetic/: benign_samples.json  injection_samples.json  synthetic_injection_data.json
experiments/: generate_synthetic_injection.py  quick_experiment.py  quick_train.py  run_regularization_variations.py  test_combined_pipeline.py  test_few_shot.py  test_optimized_sample_efficiency.py  test_regularized_sample_efficiency.py  test_sample_efficiency.py  test_synthetic_combined.py  train_adapter.py  train_arena.py  train_hlora.py  train_lora_gpu.py  train_lora_optimized.py  train_prompt_injection.py  train_regularized_lora.py
src/: __init__.py
src/guardrails/: __init__.py
src/guardrails/middleware/: __init__.py  api.py
src/guardrails/reasoning/: __init__.py  pgm.py
src/guardrails/tier1/: __init__.py  engine.py
src/guardrails/tier2/: __init__.py  deterministic.py  neural_pre_screen.py
src/guardrails/tier3/: __init__.py  training.py
src/guardrails/utils/: __init__.py  data.py
